<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/both_analysis_seekbar_dialog"
    android:padding="@dimen/padding_large">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/both_analysis_seekbar_dialog_title"
        android:textSize="@dimen/text_small"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/padding_small"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textSize="@dimen/text_small"
            android:gravity="start"/>

        <SeekBar
            android:layout_width="@dimen/seekbar_width"
            android:layout_height="wrap_content"
            android:id="@+id/both_analysis_seekbar"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text"
            android:textSize="@dimen/text_small"
            android:gravity="end"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/both_analysis_seekbar_button"
        android:minHeight="1dp"
        android:paddingTop="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_small"
        android:text="@string/button_both_analysis_seekbar_dialog"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:elevation="4dp" />

</LinearLayout>